# mp3-desktop-core

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
benchmarks/: bench_img_processing.cpp
include/: album_art.h  decompress_jpg.h  decompress_png.h  id3_parsing.h  image.h  img_processing.h  img_processing.hpp  module.modulemap
src/: album_art.c  decompress_jpg.c  decompress_png.c  id3_parsing.c  img_processing.c  img_processing.cpp
test/: test_img_processing.cpp  test_img_processing_forward.cpp
